Fixed button on mobile

--- a/Newbie/base-apparel-coming-soon-master/styles.scss
+++ b/Newbie/base-apparel-coming-soon-master/styles.scss
@@ -230,7 +230,7 @@ body {
     }
 
     @include media(tablet) {
-        width: 7rem;
+        width: 9rem;
     }
 
     &:hover {
